# social_network_engagement_bot

./: .gitignore  README.md  alembic.ini  backend.dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 429ed1deb6ee_create_all_migrations.py  9591b1b407a4_adding_chat_id_to_usr_model.py
app/: backend_pre_start.py  initial_data.py  main.py
app/api/: deps.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: auth.py  stats.py  track.py  users.py
app/constants/: enums.py
app/core/: config.py  security.py  token_session.py
app/crud/: __init__.py  base.py  crud_follower_history.py  crud_session.py  crud_track.py  crud_user.py  querybuilder.py
app/db/: base.py  base_class.py  init_db.py  session.py
app/models/: __init__.py  follower_history.py  track.py  user.py  user_session.py
app/schemas/: BaseSchemaModel.py  __init__.py  follower_history.py  search.py  token.py  track.py  user.py  user_session.py
app/services/: check_follower.py  mock_data.py  telegram_message.py
app/tasks/: background_task.py
